Font and spacing issue fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,7 @@
 p {
   font-size: 1rem;
   color: var(--gray-color);
+  font-family: "Open Sans", sans-serif;
 }
 
 p.lead {
@@ -31,7 +32,7 @@ section {
 
 .container {
   margin: auto;
-  padding: 0px 20px;
+  padding: 0px 15px;
 }
 
 @media (max-width: 47.99em) {
@@ -40,9 +41,27 @@ section {
   }
 }
 
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
 @media (min-width: 1200px) {
   .container {
-    max-width: 1180px;
+    max-width: 1140px;
   }
 }
 
